[package]
name = "ns-compute"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compute backends (CPU/Metal/CUDA) for NextStat"

[dependencies]
ns-core.workspace = true
thiserror.workspace = true
log.workspace = true
statrs.workspace = true

# CPU parallelism (Priority P0)
rayon.workspace = true
ndarray.workspace = true

# SIMD
wide.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cudarc = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true, optional = true }
objc = { workspace = true, optional = true }
block = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
env_logger.workspace = true
criterion.workspace = true
statrs.workspace = true
ns-unbinned.workspace = true

[[bench]]
name = "simd_benchmark"
harness = false

[[bench]]
name = "poisson_nll_full"
harness = false

[[bench]]
name = "flow_nll_f32_vs_f64"
harness = false
required-features = ["cuda"]

[[bench]]
name = "flow_batch_nll"
harness = false
required-features = ["cuda"]

[features]
default = ["cpu"]
cpu = []
metal = ["dep:metal", "dep:objc", "dep:block"]
cuda = ["cudarc"]
flow-ort-cuda = ["ns-unbinned/neural-cuda"]
flow-ort-tensorrt = ["ns-unbinned/neural-tensorrt"]
accelerate = []  # Apple Accelerate (vDSP/vForce) - macOS only
