[package]
name = "ns-root"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Native ROOT file reader for NextStat (TH1D/TH1F histograms, TTree/TBranch columnar access, expression engine, histogram filler)"

[dependencies]
thiserror.workspace = true
log.workspace = true
flate2 = "1.1"
lz4_flex = "0.11"
ns-zstd = { path = "../ns-zstd" }
lzma-rs = "0.3"
memmap2 = "0.9"
rayon.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only reference libzstd bindings (used by root_accuracy_gate).
zstd-safe = { version = "7.2.4", default-features = false, features = ["std"] }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[[bench]]
name = "branch_reader_bench"
harness = false
